@@ -1,3 +1,11 @@
+1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* FCall.m (ffi_types, avcall_add_primitive): Protect per
+	USE_AVCALL.
+	(avcall_add_primitive): Protect per HAVE_JDK.
+
+	* HDF5Object.m: Don't include limits.h.
+
 1999-04-26  Marcus G. Daniels  <mgd@helen.santafe.edu>
 
 	* FCall.m (ffi_types): Use float for float, not double.
